web-deployment-fixed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synergychat-web
  labels:
    app: synergychat-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: synergychat-web
  template:
    metadata:
      labels:
        app: synergychat-web
    spec:
      containers:
      - name: synergychat-web
        image: bootdotdev/synergychat-web:latest
        ports:
        - containerPort: 8080
