web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"synergychat-web"},"name":"synergychat-web","namespace":"default"},"spec":{"replicas":3,"selector":{"matchLabels":{"app":"synergychat-web"}},"template":{"metadata":{"labels":{"app":"synergychat-web"}},"spec":{"containers":[{"env":[{"name":"WEB_PORT","valueFrom":{"configMapKeyRef":{"key":"WEB_PORT","name":"synergychat-web-configmap"}}}],"image":"bootdotdev/synergychat-web:latest","name":"synergychat-web [...]
  creationTimestamp: "2025-06-23T14:35:03Z"
  generation: 5
  labels:
    app: synergychat-web
  name: synergychat-web
  namespace: default
  resourceVersion: "352572"
  uid: fde993c4-6cd1-4ec8-992a-b86efdf3bccb
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: synergychat-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: synergychat-web
    spec:
      containers:
      - env:
        - name: WEB_PORT
          valueFrom:
            configMapKeyRef:
              key: WEB_PORT
              name: synergychat-web-configmap
        image: bootdotdev/synergychat-web:latest
        imagePullPolicy: Always
        name: synergychat-web
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: "2025-06-23T14:35:03Z"
    lastUpdateTime: "2025-06-28T08:18:56Z"
    message: ReplicaSet "synergychat-web-787b96bc4b" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-06-28T08:32:33Z"
    lastUpdateTime: "2025-06-28T08:32:33Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 5
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
